--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Someone's Github Page Site in pure HTML</title>
-    <meta />
+    <meta name="description" content="Welcome to pure html" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="im-bored-patrick.jpg"
+    />
   </head>
   <body>
     <header>
       Header:
       <nav>
-        <div>This should be some nav element</div>
+        <div>This should be some <em>nav</em> element</div>
         <div>This should be another element</div>
         <div>But we can't use CSS in this lab so this looks funky</div>
       </nav>
@@ -15,14 +23,16 @@
     <main>
       <section>
         <div>
-          <h1>This is a <b>website</b></h1>
+          <h1>This is a</h1>
           <h2>
             How much <i>more</i> reading do you need to read to understand that
             this is a website?
           </h2>
           <p>
-            Like this <button>button</button> is useless, its boring, its just a
-            site
+            Like this <button>button</button> is useless, its
+            <span
+              ><strong><b>boring</b></strong></span
+            >, its just a site
           </p>
         </div>
         <br />
@@ -59,7 +69,22 @@
               Is not as fun as
               <a href="http://stonet2000.github.io">cutting bread</a>
             </li>
+            <li>
+              Doing
+              <code>
+                <pre>
+* { 
+  font-family: sans-serif 
+}
+              </pre
+                >
+              </code>
+              would make this site a lot more pleasing to look at!!! but it
+              doesn't :/
+            </li>
           </ul>
+        </div>
+        <div>
           <p>Here's a visual depicting how I feel about this site</p>
           <figure>
             <img src="im-bored-patrick.jpg" />
@@ -96,6 +121,8 @@
           <canvas width="300" height="300">
             An alternative text describing what your canvas displays.
           </canvas>
+        </div>
+        <div>
           <p>Ok how about this, create your Pokemon with this form!</p>
           <form>
             <fieldset>
@@ -240,7 +267,10 @@
             2x damage.
           </details>
           <br />
-          <p>You can't tell, but theres some super secret invisible html between here</p>
+          <p>
+            You can't tell, but theres some super secret invisible html between
+            here
+          </p>
           <template>
             <button>SECRET BUTTON 1</button><button>SECRET BUTTON 2</button>
           </template>
