--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Someone's Github Page Site in pure HTML</title>
@@ -71,14 +71,16 @@
             </li>
             <li>
               Doing
-              <code>
-                <pre>
-* { 
-  font-family: sans-serif 
-}
-              </pre
-                >
-              </code>
+              <div>
+                <code>
+                  <pre>
+  * { 
+    font-family: sans-serif 
+  }
+                </pre
+                  >
+                </code>
+              </div>
               would make this site a lot more pleasing to look at!!! but it
               doesn't :/
             </li>
@@ -226,11 +228,12 @@
             <colgroup>
               <col />
               <col span="1" class="fire" />
-              <col span="1"" class="water"> <col span="1"" class="grass">
+              <col span="1" class="water" />
+              <col span="1" class="grass" />
             </colgroup>
             <thead>
               <tr>
-                <th colspan="3">Pokemon Type Damage Table</th>
+                <th colspan="4">Pokemon Type Damage Table</th>
               </tr>
               <tr>
                 <td>\</td>
