--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
             <li>
               Doing
               <div>
-                <code>
+                
                   <pre>
   * { 
     font-family: sans-serif 
   }
                 </pre
                   >
-                </code>
+                
               </div>
               would make this site a lot more pleasing to look at!!! but it
-              doesn't :/
+              doesn't :/. Also <code>Roboto</code> is a nice font to use too!
             </li>
           </ul>
         </div>
