--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="im-bored-patrick.jpg"
+      href="assets/im-bored-patrick.jpg"
     />
   </head>
   <body>
@@ -89,7 +89,7 @@
         <div>
           <p>Here's a visual depicting how I feel about this site</p>
           <figure>
-            <img src="im-bored-patrick.jpg" />
+            <img src="assets/im-bored-patrick.jpg" />
             <figcaption>Bored...</figcaption>
           </figure>
           <p>
@@ -97,8 +97,8 @@
           </p>
           <figure>
             <picture>
-              <source srcset="futurama.jpg" media="(min-width: 1100px)" />
-              <img src="kanye.png" alt="" />
+              <source srcset="assets/futurama.jpg" media="(min-width: 1100px)" />
+              <img src="assets/kanye.png" alt="" />
             </picture>
           </figure>
           <p>
@@ -112,13 +112,13 @@
           ></iframe>
           <p>If you didn't like the above, then watch this</p>
           <video controls>
-            <source src="rickroll.mp4" type="video/mp4" />
+            <source src="assets/rickroll.mp4" type="video/mp4" />
           </video>
           <p>
             Ok if you got angry because of this trolling, listen to some
             soothing music!
           </p>
-          <audio src="rickroll.mp4" controls></audio>
+          <audio src="assets/rickroll.mp4" controls></audio>
           <p>Ok ok no more rick rolling</p>
           <canvas width="300" height="300">
             An alternative text describing what your canvas displays.
