--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <main>
-      <section className="content-section">
+      <section class="content-section">
         <div>
           <h1>This is a</h1>
           <h2>
