add new selectors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="styles/index.css" rel="stylesheet">
     <style>
       #useless-button {
+
+      }
+      #useless-button:hover {
         
       }
     </style>
