use various combinators and groupings

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
     <main>
-      <section class="content-section">
+      <section class="content-section funny">
         <div>
           <h1>This is a</h1>
           <h2>
@@ -54,7 +54,7 @@
         <br />
       </section>
       <hr />
-      <section>
+      <section class="content-section">
         <h2>Ok, i guess you can keep scrolling</h2>
         <div>
           <p>Here's a bunch of reasons why you should stop here</p>
