bg color, borders, and different units used

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       #useless-button {
 
       }
-      #useless-button:hover {
+      #useless-button::hover {
         
       }
     </style>
