paddng and margins

--- a/index.html
+++ b/index.html
@@ -100,19 +100,23 @@
         </div>
         <div>
           <p>Here's a visual depicting how I feel about this site</p>
-          <figure>
-            <img src="assets/im-bored-patrick.jpg" />
-            <figcaption>Bored...</figcaption>
-          </figure>
+          <div class="image-content-wrapper">
+            <figure>
+              <img src="assets/im-bored-patrick.jpg" />
+              <figcaption>Bored...</figcaption>
+            </figure>
+          </div>
           <p>
             Here's a photo depicting the same thing depending on screen width
           </p>
-          <figure>
-            <picture>
-              <source srcset="assets/futurama.jpg" media="(min-width: 1100px)" />
-              <img src="assets/kanye.png" alt="" />
-            </picture>
-          </figure>
+          <div class="image-content-wrapper">
+            <figure>
+              <picture>
+                <source srcset="assets/futurama.jpg" media="(min-width: 1100px)" />
+                <img src="assets/kanye.png" alt="" />
+              </picture>
+            </figure>
+          </div>
           <p>
             Ok if you didn't click that cut bread link, now you will see it
             below :)
