add roboto font, add text decor and align

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>Someone's Github Page Site in pure HTML</title>
     <meta name="description" content="Welcome to pure html" />
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- load css -->
     <link href="styles/index.css" rel="stylesheet">
     <style>
