use different displays

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <section class="content-section funny">
         <div>
-          <h1>This is a</h1>
+          <h1 style="display: block; width: 300px; height: 20px;">This is a boring site!</h1>
           <h2>
             How much <i>more</i> reading do you need to read to understand that
             this is a website?
