use transition and different position properties

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link href="styles/index.css" rel="stylesheet">
     <style>
       #useless-button {
-
+        position: relative;
+        left: 0px;
+        transition: 0.2s;
       }
-      #useless-button::hover {
+      #useless-button:hover {
+        left: 4px;
         
       }
     </style>
@@ -26,7 +29,6 @@
   </head>
   <body>
     <header>
-      Header:
       <nav>
         <div>This should be some <em>nav</em> element</div>
         <div>This should be another element</div>
