--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
       </section>
       <hr />
       <aside>Aside content!</aside>
+      <div style="grid-area:footer;">
+        and onwards!
+      </div>
     </main>
     <hr />
     <footer>
