--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <nav>
         <div>This should be some <em>nav</em> element</div>
         <div>This should be another element</div>
-        <div>But we can't use CSS in this lab so this looks funky</div>
+        <div>Hey there!</div>
+        <div>I'm stylized now, unlike my previous lab</div>
       </nav>
     </header>
     <main>
@@ -97,7 +98,7 @@
                 
               </div>
               would make this site a lot more pleasing to look at!!! but it
-              doesn't :/. Also <code>Roboto</code> is a nice font to use too!
+              doesn't :/. Also <code>Roboto</code> is a nice font to use too! Post Edit: Lab 3 now lets us do that, we have roboto installed now :)
             </li>
           </ul>
         </div>
